feat: fiabiliser la collecte et le suivi de santé
Ajoute les tris par plateforme, les snapshots monotones et parcimonieux, le refresh différé, les alertes de token et la page de santé.